[package]
name = "changelog-yaml"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "generate a changelog from a yaml file"
repository = "https://github.com/piot/changelog-yaml-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = { version = "0.9.33" }
indexmap =  {version = "2.2.6", features = ["serde"]}
regex = "1.10.4"
